syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "proto/composer/task.proto";

option go_package = "github.com/timohahaa/transcoder/proto/composer";

package composer;

service Composer {
  rpc GetTask(GetTaskRequest)               returns (Task);
  rpc FinishTask(FinishTaskRequest)         returns (google.protobuf.Empty);
  rpc UpdateProgress(UpdateProgressRequest) returns (google.protobuf.Empty);
}

message GetTaskRequest {
  string Encoder       = 1;
  string Hostname      = 2;
  string FFmpegVersion = 3;
}

message FinishTaskRequest {
  Task                      Task       = 1;
  Error                     Error      = 2;
  google.protobuf.Timestamp FinishedAt = 3;
}

message UpdateProgressRequest {
  bytes                     ID         = 1; // taskID
  google.protobuf.Duration  Delta      = 2; // how much was encoded
}

// see https://github.com/googleapis/googleapis/blob/master/google/rpc/error_details.proto
message Error {
  string              reason   = 1;
  string              domain   = 2;
  map<string, string> metadata = 3;
}
